--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Annonces</string>
+    <string name="menu_home">Home Dz</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="menu_share">Share</string>
@@ -22,4 +22,12 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="menu_deconnecter">Déconnecter</string>
     <string name="mapbox_access_token">pk.eyJ1IjoidGFyZWtkZXYiLCJhIjoiY2twZ3h2eWNmMDB2azJwcW9ka2ZzZnlpNyJ9.5bVMvYzJRjA2r5p1H7XGLg</string>
+    <string name="title_activity_liste_annonces">Liste Annonces</string>
+
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+
+    <string name="menurecherche">Annonces</string>
+    <string name="title_liste_annonce">Annonces</string>
+    <string name="title_map_annonce">Maps</string>
 </resources>
